force-app/main/default/objects/Route__c/fields/From_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>From_Warehouse__c</fullName>
    <label>From Warehouse</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Routes</relationshipLabel>
    <relationshipName>Routes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>