force-app/main/default/objects/Route__c/fields/To_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>To_Warehouse__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>To Warehouse</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Routes (To Warehouse)</relationshipLabel>
    <relationshipName>Routes1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>