force-app/main/default/objects/Route__c/fields/Travel_Time_mins__c.field-meta.xml
<CustomField>
    <fullName>Travel_Time_mins__c</fullName>
    <label>Travel Time (mins)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>