force-app/main/default/objects/Route__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>From_Warehouse__c</columns>
    <columns>To_Warehouse__c</columns>
    <columns>Travel_Time_mins__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>